--- a/SisMaper/Views/Style/Style.xaml
+++ b/SisMaper/Views/Style/Style.xaml
@@ -138,6 +138,64 @@
         <Setter Property="Background" Value="{StaticResource MahApps.Brushes.Gray9}" />
         
     </Style>
+        <Style
+            x:Key="MainWindow.ToolBarStyle"
+            TargetType="{x:Type ToolBar}">
+            <Setter
+                Property="OverridesDefaultStyle"
+                Value="true" />
+            <Setter
+                Property="SnapsToDevicePixels"
+                Value="true" />
+            <Setter
+                Property="Template">
+                <Setter.Value>
+                    <ControlTemplate
+                        TargetType="{x:Type ToolBar}">
+                        <Border
+                            x:Name="Border"
+                            Background="{DynamicResource MahApps.Brushes.Transparent}"
+                            BorderBrush="{DynamicResource MahApps.Brushes.Transparent}"
+                            BorderThickness="1"
+                            CornerRadius="2">
+                            <DockPanel>
+                                <ToggleButton
+                                    ClickMode="Press"
+                                    IsChecked="{Binding IsOverflowOpen, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}"
+                                    IsEnabled="{TemplateBinding HasOverflowItems}"
+                                    Style="{StaticResource MahApps.Styles.ToggleButton.ToolBarOverflow}">
+                                    <Popup
+                                        x:Name="OverflowPopup"
+                                        AllowsTransparency="true"
+                                        Focusable="false"
+                                        IsOpen="{Binding IsOverflowOpen, RelativeSource={RelativeSource TemplatedParent}}"
+                                        Placement="Bottom"
+                                        PopupAnimation="Slide"
+                                        StaysOpen="false">
+                                        <Border
+                                            x:Name="DropDownBorder"
+                                            Background="{DynamicResource MahApps.Brushes.Control.Background}"
+                                            BorderBrush="{DynamicResource MahApps.Brushes.Control.Border}"
+                                            BorderThickness="1">
+                                            <ToolBarOverflowPanel
+                                                x:Name="PART_ToolBarOverflowPanel"
+                                                FocusVisualStyle="{x:Null}"
+                                                Focusable="true"
+                                                Margin="2"
+                                                WrapWidth="200" />
+                                        </Border>
+                                    </Popup>
+                                </ToggleButton>
+                                <ToolBarPanel
+                                    x:Name="PART_ToolBarPanel"
+                                    IsItemsHost="true"
+                                    Margin="0 1 2 2" />
+                            </DockPanel>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
 
 
 </ResourceDictionary>
