--- a/SisMaper/Views/ViewVendas.xaml
+++ b/SisMaper/Views/ViewVendas.xaml
@@ -1,12 +1,218 @@
-﻿<Page x:Class="SisMaper.Views.ViewVendas"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:local="clr-namespace:SisMaper.Views"
-      mc:Ignorable="d"
-      Title="ViewVendas" Height="450" Width="800">
-    <Grid Background="{DynamicResource MahApps.Brushes.Window.Background}">
-        
+﻿<UserControl
+    x:Class="SisMaper.Views.ViewVendas"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:SisMaper.Views"
+    xmlns:iconpacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+    xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
+    xmlns:viewModel="clr-namespace:SisMaper.ViewModel"
+    mc:Ignorable="d"
+    Height="450"
+    Width="800">
+    <UserControl.DataContext>
+        <viewModel:VendasViewModel />
+    </UserControl.DataContext>
+
+    <Grid
+        Background="White">
+        <Grid.RowDefinitions>
+            <RowDefinition
+                Height="110" />
+            <RowDefinition
+                Height="auto" />
+            <RowDefinition
+                Height="317*" />
+            <RowDefinition
+                Height="212*" />
+        </Grid.RowDefinitions>
+        <ToolBar
+            Style="{DynamicResource MainWindow.ToolBarStyle}"
+            OverridesDefaultStyle="True"
+            VerticalAlignment="Center">
+            <RibbonGroup
+                Header="Alterar Pedido">
+                <StackPanel
+                    Orientation="Horizontal">
+                    <Button
+                        Style="{DynamicResource Button2}">
+                        <StackPanel>
+                            <iconpacks:PackIconPixelartIcons
+                                Kind="AddBox"
+                                HorizontalAlignment="Center"
+                                Foreground="Black"
+                                Width="20"
+                                Height="20" />
+                            <TextBlock
+                                Style="{DynamicResource Head2}"
+                                Text="Novo" />
+                        </StackPanel>
+                    </Button>
+                    <Button Style="{DynamicResource Button1}" CommandParameter="{Binding}" Command="{Binding EditarPedido}">
+                        <StackPanel>
+                            <iconpacks:PackIconModern
+                                Kind="EditBox"
+                                HorizontalAlignment="Center"
+                                Foreground="Black"
+                                Width="20"
+                                Height="20" />
+                            <TextBlock
+                                Style="{DynamicResource Head2}"
+                                Text="Editar" />
+                        </StackPanel>
+                    </Button>
+                    <Button
+                        Style="{DynamicResource Button2}">
+                        <StackPanel>
+                            <iconpacks:PackIconMaterial
+                                Kind="DeleteForever"
+                                HorizontalAlignment="Center"
+                                Foreground="Black"
+                                Width="20"
+                                Height="20" />
+                            <TextBlock
+                                Style="{DynamicResource Head2}"
+                                Text="Excluir" />
+                        </StackPanel>
+                    </Button>
+                    
+                </StackPanel>
+            </RibbonGroup>
+            <Separator />
+            <RibbonGroup
+                Header="Filtrar"
+                Width="489">
+                <Grid>
+                    <TextBox
+                        x:Name="FilterTextBox"
+                        Margin="7,46,3,0"
+                        mah:TextBoxHelper.Watermark="Buscar pedido... (Ctrl + F)"
+                        Background="{DynamicResource MahApps.Brushes.Gray9}"
+                        BorderThickness="0"
+                        Style="{DynamicResource TextBox.Search}"
+                        Text="{Binding FiltroPedido, Delay=300, ElementName=userControl, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                        Height="35"
+                        VerticalAlignment="Top">
+                        <TextBox.ToolTip>
+                            <StackPanel>
+                                <TextBlock
+                                    FontWeight="Bold"
+                                    Foreground="{DynamicResource MahApps.Brushes.Accent}"
+                                    Text="Filtro Avançado:" />
+                                <TextBlock>
+                                    <Run
+                                        Text="Insira o nome do Cliente para buscar" />
+                                </TextBlock>
+                                <TextBlock>
+                                    <Run
+                                        Text="Ou digite o número do pedido" />
+                                </TextBlock>
+                            </StackPanel>
+                        </TextBox.ToolTip>
+                    </TextBox>
+                    <ComboBox
+                        x:Name="FiltrarTipo"
+                        FontSize="16"
+                        Margin="7,4,0,0"
+                        HorizontalAlignment="Left"
+                        VerticalAlignment="Top"
+                        Width="136"
+                        mah:TextBoxHelper.Watermark="Status"
+                        Height="39" />
+                    <DatePicker
+                        FontSize="14"
+                        HorizontalAlignment="Left"
+                        Margin="210,4,0,0"
+
+                        VerticalAlignment="Top"
+                        Width="121"
+                        mah:TextBoxHelper.Watermark="De"
+                        mah:TextBoxHelper.UseFloatingWatermark="True"
+                        VerticalContentAlignment="Center"
+                        SelectedDate="2021-09-17"
+                        Height="39" />
+                    <DatePicker
+                        FontSize="14"
+                        HorizontalAlignment="Left"
+                        Margin="337,4,0,0"
+                        VerticalAlignment="Top"
+                        SelectedDate="2021-09-18"
+                        Height="39"
+                        mah:TextBoxHelper.UseFloatingWatermark="True"
+                        Width="121"
+                        mah:TextBoxHelper.Watermark="Até"
+                        VerticalContentAlignment="Center" />
+                    <TextBlock
+                        HorizontalAlignment="Left"
+                        Margin="172,12,0,0"
+                        FontSize="16"
+                        TextWrapping="Wrap"
+                        VerticalAlignment="Top"
+                        Height="23">
+                        <Run
+                            Language="pt-br"
+                            Text="Data" />
+                    </TextBlock>
+                </Grid>
+            </RibbonGroup>
+            <Separator />
+        </ToolBar>
+        <Border
+            Grid.Row="1"
+            BorderThickness="3"
+            Margin="5,5,5,5"
+            CornerRadius="5"
+            BorderBrush="#FFC4C4C4">
+            <DataGrid
+                Style="{DynamicResource MahApps.Styles.DataGrid}"
+                HorizontalContentAlignment="Stretch"
+                ColumnWidth="*"
+                x:Name="Pedidos"
+                ItemsSource="{Binding Pedidos}"
+                AutoGenerateColumns="False"
+                CanUserAddRows="False"
+                IsReadOnly="True"
+                VerticalContentAlignment="Stretch"
+                Margin="0,0,0,0"
+                SelectedItem="{Binding PedidoSelecionado, Mode=TwoWay}">
+
+                <DataGrid.Columns>
+                    <DataGridTextColumn
+                        Width="30*"
+                        Header="Status"
+                        Binding="{Binding Status}"
+                        IsReadOnly="True" />
+                    <DataGridTextColumn
+                        Width="30*"
+                        Header="Fatura"
+                        Binding="{Binding Fatura}"
+                        IsReadOnly="True" />
+                    <DataGridTextColumn
+                        Width="15*"
+                        Header="Número"
+                        Binding="{Binding Id}"
+                        IsReadOnly="True" />
+                    <DataGridTextColumn
+                        Width="30*"
+                        Header="Data"
+                        Binding="{Binding Data}"
+                        IsReadOnly="True" />
+                    <DataGridTextColumn
+                        Width="80*"
+                        Header="Cliente"
+                        Binding="{Binding Cliente}"
+                        IsReadOnly="true" />
+                    <mah:DataGridNumericUpDownColumn
+                        Width="40*"
+                        Header="Valor Total(R$)"
+                        StringFormat="{}{0:N2}"
+                        Culture="pt-BR"
+                        Binding="{Binding ValorTotal}"
+                        IsReadOnly="true" />
+                </DataGrid.Columns>
+                
+            </DataGrid>
+        </Border>
     </Grid>
-</Page>
+</UserControl>
