--- a/SisMaper/Views/ViewProdutos.xaml
+++ b/SisMaper/Views/ViewProdutos.xaml
@@ -7,19 +7,13 @@
     xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
     xmlns:icons="http://metro.mahapps.com/winfx/xaml/iconpacks"
     x:Name="userControl" 
-    xmlns:views="clr-namespace:SisMaper.Views"
     xmlns:viewModels="clr-namespace:SisMaper.ViewModel"
     xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
     Dialog:DialogParticipation.Register="{Binding}"
     mc:Ignorable="d"
-<<<<<<< HEAD
-    Height="500" Width="1000"
-    
-    
-    >
-=======
-    Height="450" Width="800">
->>>>>>> faefa09cc491a18e0c5af519d711049cc15de4d3
+    Height="500" Width="1000">
+
+
 
     <UserControl.DataContext>
         <viewModels:ProdutosViewModel/>
@@ -101,17 +95,6 @@
                     
                 </StackPanel>
 
-                <Separator/>
-
-                <StackPanel Width="200">
-                    <CheckBox Height="20" Width="150" Margin="5, 1" Content="Descrição" HorizontalAlignment="Left" x:Name="DescricaoCheckBox" Click="CheckBoxClick" IsChecked="true"/>
-                    <CheckBox Height="20" Width="150" Margin="5, 1" Content="Código De Barras" HorizontalAlignment="Left" x:Name="CodigoDeBarrasCheckBox" Click="CheckBoxClick" IsChecked="true"/>
-                    <CheckBox Height="20" Width="150" Margin="5, 1" Content="NCM" HorizontalAlignment="Left" x:Name="NCMCheckBox" Click="CheckBoxClick" IsChecked="true"/>
-                    <CheckBox Height="20" Width="150" Margin="5, 1" Content="Categoria" HorizontalAlignment="Left" x:Name="CategoriaCheckBox" Click="CheckBoxClick" IsChecked="true"/>
-                    <CheckBox Height="20" Width="150" Margin="5, 1" Content="Unidade" HorizontalAlignment="Left" x:Name="UnidadeCheckBox" Click="CheckBoxClick" />
-                    <CheckBox Height="20" Width="150" Margin="5, 1" Content="Preço Custo" HorizontalAlignment="Left" x:Name="PrecoCustoCheckBox" Click="CheckBoxClick" IsChecked="true"/>
-                    <CheckBox Height="20" Width="150" Margin="5, 1" Content="Preço Venda" HorizontalAlignment="Left" x:Name="PrecoVendaCheckBox" Click="CheckBoxClick" IsChecked="true"/>
-                </StackPanel>
 
 
             </ToolBar>
@@ -119,55 +102,45 @@
                 <DataGrid Style="{DynamicResource MahApps.Styles.DataGrid}" HorizontalContentAlignment="Stretch" x:Name="ProdutosDataGrid"
                           ColumnWidth="*" ItemsSource="{Binding ProdutosList}" AutoGenerateColumns="False"
                           CanUserAddRows="False" IsReadOnly="True" Margin="0,10,0,24"
-<<<<<<< HEAD
                           PreviewMouseLeftButtonDown="Produtos_MouseDown" MouseDoubleClick="Produtos_MouseDoubleClick" SelectionMode="Single"
-=======
-                          MouseDoubleClick="Produtos_MouseDoubleClick"
-                          
->>>>>>> faefa09cc491a18e0c5af519d711049cc15de4d3
                           SelectedItem="{Binding ProdutoSelecionado, Mode=TwoWay}">
                     <DataGrid.Columns>
-                        <DataGridTextColumn x:Name="DescricaoDataColumn"
-                                Width="60*"
-                                Header="Descrição"
-                                Binding="{Binding Descricao}"
-                                IsReadOnly="True" />
-                        <DataGridTextColumn x:Name="CodigoDeBarrasDataColumn"
+                        <DataGridTextColumn
                                 Width="40*"
                                 Header="Código de Barras"
                                 Binding="{Binding CodigoBarras}"
                                 IsReadOnly="True" />
-                        <DataGridTextColumn x:Name="NCMDataColumn"
+                        <DataGridTextColumn
+                                Width="80*"
+                                Header="Descrição"
+                                Binding="{Binding Descricao}"
+                                IsReadOnly="True" />
+                        <DataGridTextColumn
                                 Width="30*"
                                 Header="NCM"
-                                Binding="{Binding NCM}"
+                                Binding="{Binding NCM.Id}"
                                 IsReadOnly="True" />
-                        <DataGridTextColumn x:Name="CategoriaDataColumn"
+                        <DataGridTextColumn
                                 Width="30*"
                                 Header="Categoria"
-                                Binding="{Binding Categoria}"
+                                Binding="{Binding Categoria.Descricao}"
                                 IsReadOnly="True" />
-                        <DataGridTextColumn x:Name="UnidadeDataColumn"
-                                Width="30*"
-                                Header="Unidade"
-                                Binding="{Binding Unidade}"
-                                IsReadOnly="True" Visibility="Hidden"/>
-                        <mah:DataGridNumericUpDownColumn x:Name="PrecoCustoDataColumn"
+                        <mah:DataGridNumericUpDownColumn
                                 Width="25*"
                                 Header="Preço de Custo(R$)"
                                 StringFormat="{}{0:N2}"
                                 Culture="pt-BR"
                                 Binding="{Binding PrecoCusto}"
                                 IsReadOnly="true" />
-                        <mah:DataGridNumericUpDownColumn x:Name="PrecoVendaDataColumn"
+                        <mah:DataGridNumericUpDownColumn
                                 Width="25*"
                                 Header="Preço de Venda(R$)"
                                 StringFormat="{}{0:N2}"
                                 Culture="pt-BR"
                                 Binding="{Binding PrecoVenda}"
                                 IsReadOnly="true" />
-
                     </DataGrid.Columns>
+
 
 
                 </DataGrid>
