--- a/SisMaper/Views/ViewPedido.xaml
+++ b/SisMaper/Views/ViewPedido.xaml
@@ -1,28 +1,33 @@
 ﻿<mah:MetroWindow
-    
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:wi="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
+    xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
     xmlns:tools="clr-namespace:SisMaper.Tools"
     xmlns:toolkit="clr-namespace:System.Windows.Controls;assembly=DotNetProjects.Input.Toolkit"
     xmlns:viewModels="clr-namespace:SisMaper.ViewModel"
     xmlns:models="clr-namespace:SisMaper.Models"
     xmlns:s="clr-namespace:System;assembly=mscorlib"
+    xmlns:prism="http://prismlibrary.com/"
     xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
     xmlns:iconpacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+    xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
     x:Class="SisMaper.Views.ViewPedido"
     x:Name="this"
     mc:Ignorable="d"
+    Dialog:DialogParticipation.Register="{Binding}"
     Title="{Binding Pedido.Id, StringFormat=Pedido - {0}}"
     TitleCharacterCasing="Normal"
     Height="599"
     Width="812"
     SaveWindowPosition="True">
     <mah:MetroWindow.DataContext>
-        <viewModels:PedidoViewModel/>
+        <viewModels:PedidoViewModel />
     </mah:MetroWindow.DataContext>
+
     <mah:MetroWindow.Resources>
         <tools:DecimalToRealString
             x:Key="DecimalToRealString" />
@@ -183,7 +188,8 @@
             Margin="0,24,20,0"
             VerticalAlignment="Top"
             Height="32"
-            Width="211" />
+            Width="211"
+            SelectedDate="{Binding Pedido.Data, Mode=TwoWay}" />
         <TextBlock
             HorizontalAlignment="Left"
             Margin="26,75,0,0"
@@ -198,12 +204,16 @@
             Content="Cancelar"
             HorizontalAlignment="Right"
             VerticalAlignment="Bottom"
+            Command="{Binding Cancelar}"
+            CommandParameter="{Binding }"
             Margin="0,0,84,20" />
         <Button
             Style="{DynamicResource OptionsButtonStyle}"
             Content="Salvar"
             HorizontalAlignment="Right"
             VerticalAlignment="Bottom"
+            Command="{Binding Salvar}"
+            CommandParameter="{Binding }"
             Margin="0,0,20,20" />
         <Button
             Style="{DynamicResource OptionsButtonStyle}"
@@ -247,7 +257,7 @@
             HorizontalAlignment="Right"
             Margin="0,24,410,0"
             TextWrapping="Wrap"
-            Text="Aberto"
+            Text="{Binding Pedido.Status}"
             VerticalAlignment="Top"
             Width="66" />
         <TextBox
@@ -256,7 +266,7 @@
             HorizontalAlignment="Left"
             Margin="151,24,0,0"
             TextWrapping="Wrap"
-            Text="00024"
+            Text="{Binding Pedido.Id}"
             VerticalAlignment="Top"
             Width="66" />
         <TabControl
@@ -274,25 +284,20 @@
                     <ComboBox
                         Grid.Row="0"
                         x:Name="cmbProduto"
+                        VerticalAlignment="Top"
                         Height="32"
                         Margin="10,10,296,0"
                         FontSize="16"
-                        mah:TextBoxHelper.Watermark="Buscar Produto"
-                        DisplayMemberPath="Descricao"
                         IsEditable="True"
-                        ItemsSource="{Binding}"
-                        Text="{Binding Descricao}"
                         MaxDropDownHeight="125"
+                        ItemsSource="{Binding Produtos}"
+                        SelectedItem="{Binding NovoItem.Produto, Mode=TwoWay}"
+                        DisplayMemberPath="Descricao"
                         mah:TextBoxHelper.WatermarkAlignment="Right"
                         mah:TextBoxHelper.AutoWatermark="True"
-                        PreviewTextInput="FiltrarProdutos"
-                        KeyDown="AdicionarItem"
-                        Grid.IsSharedSizeScope="True"
-                        VerticalAlignment="Top" />
-                    <xctk:ValueRangeTextBox
-                        x:Name="Quantidade"
-                        ValueDataType="{x:Type s:Double}"
-                        FontSize="16"
+                        mah:TextBoxHelper.Watermark="Buscar Produto"
+                        Grid.IsSharedSizeScope="True" />
+                    <TextBox
                         Style="{DynamicResource TextBoxStyle1}"
                         HorizontalAlignment="Right"
                         Margin="0,10,118,0"
@@ -301,20 +306,22 @@
                         Width="106"
                         mah:TextBoxHelper.Watermark="Quantidade"
                         InputScope="Number"
-                        MinValue="0"
-                        QueryValueFromText="VerificaQuantidade"
-                        QueryTextFromValue="VerificaQuantidade2"
-                        MaxValue="9999"
-                        BeepOnError="True"
-                        RenderTransformOrigin="0.379,0.595" />
+                        Text="{Binding NovoItem.Quantidade, Mode=OneWay}"
+                        RenderTransformOrigin="0.379,0.595"
+                    >
+                        <i:Interaction.Triggers>
+                            <i:EventTrigger EventName="TextChanged">
+                                <prism:InvokeCommandAction Command="{Binding VerificaQuantidade}"/>
+                            </i:EventTrigger>
+                        </i:Interaction.Triggers>
+                    </TextBox>
                     <DataGrid
                         BorderThickness="1"
                         Style="{DynamicResource MahApps.Styles.DataGrid}"
                         HorizontalContentAlignment="Stretch"
                         ColumnWidth="*"
-                        x:Name="Itens"
                         AutoGenerateColumns="False"
-                        ItemsSource="{Binding}"
+                        ItemsSource="{Binding Pedido.Itens}"
                         CanUserAddRows="False"
                         Height="auto"
                         Width="auto"
@@ -391,15 +398,17 @@
                         Content="Adicionar"
                         HorizontalAlignment="Right"
                         VerticalAlignment="Top"
+                        Command="{Binding Adicionar}"
+                        CommandParameter="{Binding }"
                         Margin="0,10,10,0" />
                     <TextBox
                         IsEnabled="False"
-                        x:Name="ValorTotal"
                         Style="{DynamicResource TextBoxStyle1}"
                         HorizontalAlignment="Right"
                         Margin="0,0,10,1"
                         TextWrapping="Wrap"
-                        Text="R$ 0,00"
+                        
+                        Text="{Binding Pedido.ValorTotal, StringFormat='R$ #,##0.00', ConverterCulture=pt-BR, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                         VerticalAlignment="Bottom"
                         Width="119"
                         HorizontalContentAlignment="Right"
@@ -414,12 +423,13 @@
                             Text="Valor Total" />
                     </TextBlock>
                     <iconpacks:PackIconMaterial
-            Kind="MagnifyPlus"
-            Margin="0,14,268,0"
-            Height="24"
-            Width="23"
-            Foreground="#FF939393"
-            HorizontalAlignment="Right" PreviewMouseDoubleClick="WindowLote" />
+                        Kind="MagnifyPlus"
+                        Margin="0,14,268,0"
+                        Height="24"
+                        Width="23"
+                        Foreground="#FF939393"
+                        HorizontalAlignment="Right"
+                        PreviewMouseDoubleClick="WindowLote" />
 
                 </Grid>
             </TabItem>
@@ -440,14 +450,14 @@
             Margin="193,0,0,20" />
         <ComboBox
             Grid.Row="0"
-            x:Name="cmbCliente"
             Height="32"
             Margin="96,70,410,0"
             FontSize="16"
             mah:TextBoxHelper.Watermark="Buscar Cliente"
+            ItemsSource="{Binding Clientes}"
+            SelectedItem="{Binding Pedido.Cliente}"
             DisplayMemberPath="Nome"
             IsEditable="True"
-            Text="{Binding Nome, Mode=OneWay}"
             MaxDropDownHeight="125"
             mah:TextBoxHelper.WatermarkAlignment="Right"
             mah:TextBoxHelper.AutoWatermark="True"
@@ -476,18 +486,18 @@
         </TextBlock>
         <ComboBox
             Grid.Row="0"
-            x:Name="cmbCliente_Copy"
             Height="32"
             Margin="581,70,20,0"
             FontSize="16"
-            mah:TextBoxHelper.Watermark="Buscar Natureza"
-            DisplayMemberPath="Nome"
-            IsEditable="True"
-            Text="Venda Normal"
+            VerticalAlignment="Top"
             MaxDropDownHeight="125"
+            ItemsSource="{Binding Naturezas}"
+            SelectedItem="{Binding Pedido.Natureza, Mode=TwoWay}"
+            DisplayMemberPath="Descricao"
+            IsEditable="True"
+            mah:TextBoxHelper.Watermark="Buscar Natureza"
             mah:TextBoxHelper.WatermarkAlignment="Right"
             mah:TextBoxHelper.AutoWatermark="True"
-            Grid.IsSharedSizeScope="True"
-            VerticalAlignment="Top" />
+            Grid.IsSharedSizeScope="True" />
     </Grid>
 </mah:MetroWindow>
